<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".menu.ContactoActivity">


    <!--Incluyendo la barra a los activities actionbar.xml -->
    <include android:id="@+id/miActionBar"
        layout="@layout/actionbarmascotas"
        >

    </include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo"
        android:textSize="@dimen/titulo"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/txttitulo"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/miActionBar"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/view"
        android:layout_below="@+id/txttitulo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtNombre"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_nombre"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/view2"
        android:layout_below="@+id/view">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtEmail"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/view3"
        android:layout_below="@+id/view2">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtMensaje"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_mensaje"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnEnviarMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_enviar_comentario"
        android:theme="@style/btnRaisedSiguiente"
        android:layout_alignParentBottom="true"
        />





</RelativeLayout>
